move subscription to it's own row to avoid overlap issues

--- a/src/renderer/scss/component/_card.scss
+++ b/src/renderer/scss/component/_card.scss
@@ -240,6 +240,10 @@
   right: $spacing-vertical;
 }
 
+.card__actions--end {
+  justify-content: flex-end;
+}
+
 /*
  .card-row is used on the discover page
  It is a list of cards that extend past the right edge of the screen
